rancher/rancher-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/issuer: rancher
      cert-manager.io/issuer-kind: Issuer
      field.cattle.io/publicEndpoints: '[{"addresses":[""],"port":443,"protocol":"HTTPS","serviceName":"cattle-system:rancher","ingressName":"cattle-system:rancher","hostname":"rancher.unixsre.com","allNodes":false}]'
      kubernetes.io/ingress.class: nginx
      meta.helm.sh/release-name: rancher
      meta.helm.sh/release-namespace: cattle-system
      nginx.ingress.kubernetes.io/configuration-snippet: "proxy_set_header Upgrade
        \"websocket\";\nproxy_set_header Connection \"Upgrade\";    \n"
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
      nginx.org/websocket-services: rancher
    labels:
      app: rancher
      app.kubernetes.io/managed-by: Helm
      chart: rancher-2.6.2
      heritage: Helm
      release: rancher
    name: rancher
    namespace: cattle-system
  spec:
    rules:
    - host: rancher.unixsre.com
      http:
        paths:
        - backend:
            service:
              name: rancher
              port:
                number: 80
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - rancher.unixsre.com
      secretName: tls-rancher-ingress
